<resources>
    <string name="app_name">TakeMyPetAppUfficiale</string>
    <string name="title_activity_petsitter">Activity_petsitter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_eventi">Eventi</string>
    <string name="title_switch">Switch</string>
    <string name="title_chat">Chat</string>
    <string name="title_preferiti">Preferiti</string>
    <string name="title_annunci_preferiti">Preferiti</string>
    <string name="title_annunci_accettati">Accettati</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Title</string>


    <string name="nomeevento">NomeEvento</string>
    <string name="author">Author</string>
    <string name="text">Text</string>
    <string name="date">Date</string>
    <string name="utente">Utente</string>
    <string name="annunci">Annunci</string>


</resources>
