<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_eventi"
        android:icon="@drawable/ic_eventi_black_24dp"
        android:title="@string/title_eventi" />

    <item
        android:id="@+id/navigation_switch"
        android:icon="@drawable/ic_switch_mode_black_24dp"
        android:title="@string/title_switch" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_preferiti"
        android:icon="@drawable/ic_preferiti_black_24dp"
        android:title="@string/title_preferiti" />

</menu>
