<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="6dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="579dp"
            android:background="@color/colorVerdeApp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_annuncio"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/logoapppet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_item_titolo_lista_annunci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_annuncio"
                android:layout_marginStart="0dp"
                android:hint="@string/title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/textView_item_autore_lista_annunci" />

            <TextView
                android:id="@+id/textView_item_autore_lista_annunci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_item_titolo_lista_annunci"
                android:layout_alignParentStart="false"
                android:hint="@string/author"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/textView_item_autore_lista_annunci"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_item_testo_lista_annunci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_item_autore_lista_annunci"
                android:hint="@string/text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_item_data_lista_annunci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_item_testo_lista_annunci"
                android:hint="@string/date"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>