<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="6dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorVerdeApp">

            <TextView
                android:id="@+id/textView_NomeEvento"
                android:layout_width="180dp"
                android:layout_height="53dp"
                android:layout_below="@+id/set_image_eventi"
                android:layout_marginStart="0dp"
                android:hint="@string/nomeevento"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/textView_item_autore_lista_eventi" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/set_image_utente"
                android:layout_width="187dp"
                android:layout_height="178dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="0dp"
                android:src="@drawable/logoapppet"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/set_image_eventi"
                android:layout_width="187dp"
                android:layout_height="178dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/logoapppet"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_singleItemLista_UsernameUtente"
                android:layout_width="180dp"
                android:layout_height="53dp"
                android:layout_below="@+id/set_image_eventi"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="-3dp"
                android:hint="@string/utente"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/textView_item_autore_lista_eventi" />

            <TextView
                android:id="@+id/textView_item_autore_lista_eventi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_singleItemLista_UsernameUtente"
                android:layout_alignParentStart="@+id/set_image_eventi"
                android:hint="@string/author"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/textView_item_autore_lista_eventi"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_item_testo_lista_eventi"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_item_autore_lista_eventi"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="13dp"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="7dp"
                android:hint="@string/text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_item_data_lista_eventi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_item_testo_lista_eventi"
                android:hint="@string/date"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>